--- a/tasks/pages/Investor Relation.html
+++ b/tasks/pages/Investor Relation.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css"
         integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/css/style.css">
-<!--     <style>
+    <!--     <style>
         * {
             margin: 0;
             padding: 0;
@@ -186,12 +186,12 @@
                 <p class="centered ">Centered</p>
             </div>
         </section>
-        <section class="">
-            <div class="bg-blue-1 row what-everest-1  ">
-                <div class="text-center-1 col-xs  col-sm-4">
+        <section class="what-everest">
+            <div class="bg-blue-1 row ">
+                <div class="text-center-1 col-xs col-sm-4">
                     <h1>what's your everest?</h1>
                 </div>
-                <div class="col-xs  col-sm-8">
+                <div class="col-xs col-sm-8">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit suscipit, omnis totam fugit quas aut aliquam
                         corrupti non? Numquam officiis modi dolor saepe expedita consequuntur fugit facilis molestiae, soluta ea. lorem ipsum
@@ -213,18 +213,71 @@
         </section>
         <section class="investment-thesis-section ">
             <div class="center-1">
-                <div class="">
-                    <h2 class="text-center">Investment Thesis</h2>
+                <div class="text-center">
+                    <h2 >Investment Thesis</h2>
                 </div>
-                <div class="row block investment-thesis ">
-                    <div class="col-xs  col-sm-3  card">Community Driven Platform</div>
-                    <div class="col-xs  col-sm-3 col-sm-offset-1  card">One of a kind - First <br> to market</div>
-                    <div class="col-xs  col-sm-3 col-sm-offset-1  card">Early stage opportunity</div>
+                <div class="row block investment-thesis number-1">
+                    <div class="col-xs col-sm-3 col-sm-offset-1 card tab  num-1">
+                        <input type="checkbox" id="chck1">
+                        <label class="tab-label" for="chck1">One of a kind - First to market</label>
+                        <div class="tab-content">
+                            <p>
+                                There is a growing demand for specializationfrom passionate shoppers. Everest is the first online marketplace and
+                                community hub exclusively built for the outdoor recreation world.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-xs col-sm-3 card tab num-1">
+                        <input type="checkbox" id="chck2">
+                        <label class="tab-label" for="chck2">Community Driven Platform</label>
+                        <div class="tab-content">
+                            <p>
+                                Users can shop great deals on a wide range of product for different outdoor hobbies. They can also consume ansd share
+                                content, converse, with sellers and brands, check out celebrity picks, and stream outdoor video content.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-xs col-sm-3 col-sm-offset-1 card tab num-1">
+                        <input type="checkbox" id="chck3">
+                        <label class="tab-label" for="chck3">Early stage opportunity</label>
+                        <div class="tab-content">
+                            <p>
+                                Everest is growing fast! With explosive growth just around the corner this is an exciting oppourunityto get itn on the
+                                groud floor. Together we can move mountains!
+                            </p>
+                        </div>
+                    </div>
                 </div>
-                <div class="row block investment-thesis ">
-                    <div class="col-xs  col-sm-3  card">Brand Awareness & Reach</div>
-                    <div class="col-xs  col-sm-3 col-sm-offset-1  card">World Class Talent</div>
-                    <div class="col-xs  col-sm-3 col-sm-offset-1  card">Significant IP Vault</div>
+                <div class="row block investment-thesis number-2">
+                    <div class="col-xs col-sm-3 card tab num-1">
+                        <input type="checkbox" id="chck4">
+                        <label class="tab-label" for="chck4">Brand Awareness & Reach</label>
+                        <div class="tab-content">
+                            <p>
+                                As we grow we are building an eternal brand that we know will ane day soon be a household name. We're looking to truly
+                                disrupt the online marketplacve industry
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-xs col-sm-3 col-sm-offset-1 card tab num-1">
+                        <input type="checkbox" id="chck5">
+                        <label class="tab-label" for="chck5">World Class Talent</label>
+                        <div class="tab-content">
+                            <p>
+                                Our has worked for and with some of the biggest names in the industry. With tons of specific experience in the
+                                ecommerece world as well, we're ready to boil the ocean.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-xs col-sm-3 col-sm-offset-1 card tab num-1">
+                        <input type="checkbox" id="chck6">
+                        <label class="tab-label" for="chck6">Significant IP Vault</label>
+                        <div class="tab-content">
+                            <p>
+                                We've got valuable patents, cathchy trademarks, memorable URLs, and more in the Everest portfolio.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -234,24 +287,24 @@
                     <h2 class="center-1">Data at a Glance</h2>
                 </div>
                 <div class="row ">
-                    <div class="col-xs  col-sm-3  center-1 border-1 data-1">
+                    <div class="col-xs col-sm-3  center-1 border-1 data-1">
                         <p>Our Reach <br> <b>150M+</b></p>
                     </div>
-                    <div class="col-xs  col-sm-3   center-1  border-1 data-1">
+                    <div class="col-xs col-sm-3   center-1  border-1 data-1">
                         <p>Founded <br> <b>2020</b></p>
                     </div>
-                    <div class="col-xs  col-sm-3  center-1   border-1 data-1">
+                    <div class="col-xs col-sm-3  center-1   border-1 data-1">
                         <p>Active Seller <br> <b>1,250+</b> <br> (Growing Daily)</p>
                     </div>
                 </div>
                 <div class="row ">
-                    <div class="col-xs  col-sm-3  center-1 border-1 data-1">
+                    <div class="col-xs col-sm-3  center-1 border-1 data-1">
                         <p>Active SKU's <br> <b>2M+</b> <br>(Growing Daily)</p>
                     </div>
-                    <div class="col-xs  col-sm-3  center-1 border-1 data-1">
+                    <div class="col-xs col-sm-3  center-1 border-1 data-1">
                         <p># Of Product <br> <b>1.15M+</b> <br> (Growing Daily)</p>
                     </div>
-                    <div class="col-xs  col-sm-3  center-1 border-1 data-1">
+                    <div class="col-xs col-sm-3  center-1 border-1 data-1">
                         <p>Inventory Under Control <br> <b>$1.25B+</b></p>
                     </div>
                 </div>
@@ -259,15 +312,15 @@
         </section>
         <section class="talk-directly">
             <div class="row ">
-                <div class="col-xs  col-sm-5 col-sm-offset-1 ">
+                <div class="col-xs col-sm-5 col-sm-offset-1 ">
                     <div class="talk-1">
                         <h1 class="">Talk Directly with <br> Bill Voss,</h1>
                         <p>Our Founder and Cheif Executive Officer</p>
                     </div>
                 </div>
-                <div class="col-xs  col-sm-3 border-2">
+                <div class="col-xs col-sm-3 border-2">
                     <div class="row ">
-                        <div class="col-xs  col-1"><img src="../svg/All_Icons-for-New-Pages/Schedule-Meeting.svg" alt="meeting"
+                        <div class="col-xs col-1"><img src="../svg/All_Icons-for-New-Pages/Schedule-Meeting.svg" alt="meeting"
                                 class="img-responsive img meeting-svg-1 flt-l">
                         </div>
                         <div class="col-1 col-xs  flt-r meet-text">
@@ -300,7 +353,7 @@
         <section class="download-1">
             <div class="row ">
                 <div class=" col-xs col-sm-offset-3 col-sm-3 ">
-                    <h1 class=" sign-up-alt">Sign Up For Investor Alert </h1>
+                    <h1 class=" sign-up-alt">Download Our Investment Materials</h1>
                     <form>
                         <div class="form-group">
                             <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Name *">
@@ -314,7 +367,7 @@
                         <button type="submit" class="btn btn-default btn-clr-blue">Dowload</button>
                 </div>
                 <div class="col-xs col-sm-offset-1 col-sm-4 ">
-                    <img src="../svg/All_Icons-for-New-Pages/eBook-IR-Page.svg" alt="meeting" class="img-responsive img flt-r">
+                    <img src="../svg/All_Icons-for-New-Pages/Budget.svg" alt="Download Material" class="img-responsive img flt-l">
                 </div>
         </section>
 
@@ -324,7 +377,8 @@
     <!-- !script -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
-        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
